# GlyphPortrait

./: .gitignore  README.md  app.py  cli.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
docs/: algorithm.md  architecture.md  gpu-roadmap.md  limitations.md  roadmap.md
docs/pr-plans/: fidelity-landmark-aware.md  layout-advanced-typography.md  packaging-release.md  pipeline-profiling-optimization.md  portfolio-showcase.md  pro-controls-ui-cli.md  quality-eval-framework.md  reliability-fallback-ux.md  typography-system-export.md  (+1 more)
experiments/: 001_uniform_sampling_vs_importance_sampling.md  002_mask_failures.md  003_reference_recreation_attempt.md  004_text_density_tradeoff.md  005_reference_wallpaper_decomposition.md  006_reference_recreation_iterations.md  007_visual_quality_pass.md  008_reference_visual_forensics.md  009_face_reconstruction_notes.md  010_jersey_reconstruction_notes.md  generate_evolution_assets.py
glyphforge/: __init__.py  config.py
reference_analysis/: reference_density_map.md  reference_layout_spec.json  reference_orientation_map.md  reference_typography_hierarchy.md  reference_word_inventory.md
scratch/: recreate_jordan_face_study_v2.py  recreate_jordan_face_study_v3.py  recreate_jordan_face_study_v4.py  recreate_jordan_face_study_v5.py  recreate_jordan_forensic_v4.py  recreate_jordan_text_paint_v0.py  recreate_jordan_text_paint_v2.py
scripts/: recreate_reference_wallpaper.py
studies/: __init__.py
tests/: test_export.py  test_keywords.py  test_layout.py  test_masks.py  test_reference_recreation.py
(+41 files in other folders)
